Issue #5256 Adding start.jar --add-module (#5258)
* Issue #5256 --add-modules

Signed-off-by: Greg Wilkins <gregw@webtide.com>

* main.ini

Signed-off-by: Greg Wilkins <gregw@webtide.com>

* Issue #5256 --add-modules

usage.txt

Signed-off-by: Greg Wilkins <gregw@webtide.com>

* Issue #5256 --add-modules

updates from review

Signed-off-by: Greg Wilkins <gregw@webtide.com>

* Issue #5256 --add-modules

updates from review

Signed-off-by: Greg Wilkins <gregw@webtide.com>

* fixed test

Signed-off-by: Greg Wilkins <gregw@webtide.com>